Added border around location info

--- a/index.html
+++ b/index.html
@@ -11,111 +11,110 @@
 </head>
 
 <body class="container">
-<div class="row">
-    <div class="col-sm-12 col-lg-12">    
-<h1 id="page-heading">Glede Suppliers</h1>
-</div>
-</div>
-
-<div class="map-section container">
-    <div class="row float-container">
-        <div class="col-lg-12 col-sm-12 float-child">
-            <div id="map">
-            </div>
+    <div class="row">
+        <div class="col-sm-12 col-lg-12">
+            <h1 id="page-heading">Glede Suppliers</h1>
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col-sm-12 col-lg-12">
-        <!-- Welcome heading-->
-        <h2>Where to go?</h2>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-12 col-lg-12">
-        <!-- Instructions for map-->
-        <p class="text-center">
-            Click on map titles for more information
-        </p>
-    </div>
-</div>
-
-<div class="location-info" id="attraction-intro-1">
-    <div class="row">
-        <div class="col-8 offset-2">
-            <h3 class="attraction-heading">Group: Oslo Raw</h3>
-            <h3>Name: Oslo Raw Frogner, Skovveien 16, Oslo, Norge</h3>
-
-            <div class="row">
-                <div class="col-12">
-                    <p>
-                    </p>
+    <div class="map-section container">
+        <div class="row float-container">
+            <div class="col-lg-12 col-sm-12 float-child">
+                <div id="map">
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="location-info" id="attraction-intro-2">
     <div class="row">
-        <div class="col-8 offset-2">
-            <h3 class="attraction-heading">Group: Oslo Raw</h3>
-            <h3>Name: Oslo Raw Adamstuen, Ullevålsveien 82, Oslo, Norge</h3>
+        <div class="col-sm-12 col-lg-12">
+            <!-- Welcome heading-->
+            <h2>Where to go?</h2>
+        </div>
+    </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <p>
-                    </p>
+    <div class="row">
+        <div class="col-sm-12 col-lg-12">
+            <!-- Instructions for map-->
+            <p class="text-center">
+                Click on map titles for more information
+            </p>
+        </div>
+    </div>
+
+    <div class="location-info" id="attraction-intro-1">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h3 class="attraction-heading">Group: Oslo Raw</h3>
+                <h3>Name: Oslo Raw Frogner, Skovveien 16, Oslo, Norge</h3>
+
+                <div class="row">
+                    <div class="col-12">
+                        <p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="location-info" id="attraction-intro-3">
-    <div class="row">
-        <div class="col-8 offset-2">
-            <h3 class="attraction-heading">Group: Olio</h3>
-            <h3>Name: Olio Beauty Vika, Huitfeldts gate 11, Oslo, Norge</h3>
+    <div class="location-info" id="attraction-intro-2">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h3 class="attraction-heading">Group: Oslo Raw</h3>
+                <h3>Name: Oslo Raw Adamstuen, Ullevålsveien 82, Oslo, Norge</h3>
 
-            <div class="row">
-                <div class="col-12">
-                    <p>
-                        Olio er en medisinsk hudpleie- og skjønnhetssalong som fokuserer på kvalitet fra start til slutt. Her får du komme til terapeuter som vet hva de gjør og som du kan stole på. 
-                    </p>
+                <div class="row">
+                    <div class="col-12">
+                        <p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="location-info" id="attraction-intro-4">
-    <div class="row">
-        <div class="col-8 offset-2">
-            <h3 class="attraction-heading">Group: Olio</h3>
-            <h3>Name: Olio Beauty Majorstuen, Valkyriegata 3, Majorstuen, Oslo, Norge</h3>
+    <div class="location-info" id="attraction-intro-3">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h3 class="attraction-heading">Group: Olio</h3>
+                <h3>Name: Olio Beauty Vika, Huitfeldts gate 11, Oslo, Norge</h3>
 
-            <div class="row">
-                <div class="col-12">
-                    <p> </p>
+                <div class="row">
+                    <div class="col-12">
+                        <p>
+                            Olio er en medisinsk hudpleie- og skjønnhetssalong som fokuserer på kvalitet fra start til
+                            slutt. Her får du komme til terapeuter som vet hva de gjør og som du kan stole på.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="location-info" id="attraction-intro-4">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h3 class="attraction-heading">Group: Olio</h3>
+                <h3>Name: Olio Beauty Majorstuen, Valkyriegata 3, Majorstuen, Oslo, Norge</h3>
+
+                <div class="row">
+                    <div class="col-12">
+                        <p> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-crossorigin="anonymous"></script>
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
 <script
     src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 <script src="assets/js/map.js">
 </script>
 <script asyncdefer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADq66twskCpg_SQwgjmY4o9SgnKue0wLE&callback=initMap">
-    </script>
-<!-- <script asyncdefer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-Uslntl0BKz7M0WAdMJr95VLkSyfSJgA&callback=initMap">
-    </script> -->
+</script>
